# ner_spacy_training_japanese

./: README.md  pyproject.toml
ner_spacy_training_japanese/: ner_spacy_training_japaneze.ipynb
